syntax = "proto3";

option go_package = "file/pb";

message File {
  string file_name = 1;
}

message GetFileListRequest {}
message GetFileListResponse { repeated File files = 1; }

service Archive{
  rpc GetFileList(GetFileListRequest) returns (GetFileListResponse) {}
}